--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -1450,6 +1450,23 @@ label:focus,
 	background-color: #fff;
 }
 
+.tooltip {
+	background: transparent !important;
+	top: -20px !important;
+	left: -78.5px !important;
+}
+.tooltip-arrow{
+	top: 40px;
+	left: 109px !important;
+}
+.tooltip.top {
+	margin-top: -15px;
+}
+.tooltip-inner{
+	max-width: 150px;
+	padding: 5px 25px;
+}
+
 #screen-chat{
 	width: 100%;
 	height: 100%;
