[34] Feature: Chat Text & Emoji - P2

--- a/src/views/main/groupChat/groupChatModal.ejs
+++ b/src/views/main/groupChat/groupChatModal.ejs
@@ -23,7 +23,7 @@
                                 <li data-uid="test-uid-01">
                                     <div class="contactPanel">
                                         <div class="user-avatar">
-                                            <img src="./libraries/images/users/avatar-default.jpg" alt="">
+                                            <img src="./libraries/images/users/avatar-default.png" alt="">
                                         </div>
                                         <div class="user-name">
                                             <p>
