[35] Feature: Chat Text & Emoji - P3

--- a/src/views/auth/master.ejs
+++ b/src/views/auth/master.ejs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Awesome Chat</title>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Message Chat</title>
+		
     <link rel="shortcut icon" href="./libraries/images/logo_favicon/favicon-trungquandev.png" />
 
     <link rel="stylesheet" href="./libraries/bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -17,7 +18,7 @@
     <script src="./libraries/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./libraries/bower_components/AlertifyJS/build/alertify.js"></script>
 
-    <script src="./libraries/js/authConfig.js" type="text/javascript"></script>
+    <script src="./libraries/js/authConfig.js"></script>
 </head>
 <body>
     <div class="container">
