--- a/src/views/main/home/sections/leftSide.ejs
+++ b/src/views/main/home/sections/leftSide.ejs
@@ -33,7 +33,7 @@
 									<span class="time">
 										<%= convertTimstampToHumanTime(lastMessage.createdAt) %>
 									</span>
-									<span class="preview">
+									<span class="preview convert-emoji">
 										<% if(lastMessage.messageType === 'text'){ %>
 											<%= lastMessage.text %>
 										<% } %>
@@ -63,7 +63,7 @@
 									<span class="time">
 										<%= convertTimstampToHumanTime(lastMessage.createdAt) %>
 									</span>
-									<span class="preview">
+									<span class="preview convert-emoji">
 										<% if(lastMessage.messageType === 'text'){ %>
 											<%= lastMessage.text %>
 										<% } %>
@@ -114,7 +114,7 @@
 								<span class="time">
 									<%= convertTimstampToHumanTime(lastMessage.createdAt) %>
 								</span>
-								<span class="preview">
+								<span class="preview convert-emoji">
 									<% if(lastMessage.messageType === 'text'){ %>
 										<%= lastMessage.text %>
 									<% } %>
@@ -167,7 +167,7 @@
 								<span class="time">
 									<%= convertTimstampToHumanTime(lastMessage.createdAt) %>
 								</span>
-								<span class="preview">
+								<span class="preview convert-emoji">
 									<% if(lastMessage.messageType === 'text'){ %>
 										<%= lastMessage.text %>
 									<% } %>
