--- a/src/views/main/home/sections/rightSide.ejs
+++ b/src/views/main/home/sections/rightSide.ejs
@@ -4,28 +4,46 @@
 				<% if(conversation.members){ %>
 					<div class="right tab-pane <% if(index === 0){ %> active <% } %>" data-chat="<%= conversation._id %>" id="to_<%= conversation._id %>">
 						<div class="top">
-								<span>To: <span class="name"><%= conversation.name %></span></span>
-								<span class="chat-menu-right">
-										<a href="#attachsModal_<%= conversation._id %>" class="show-attachs" data-toggle="modal">
-												Tệp đính kèm
-												<i class="fa fa-paperclip"></i>
-										</a>
-								</span>
-								<span class="chat-menu-right">
-										<a href="javascript:void(0)">&nbsp;</a>
-								</span>
-								<span class="chat-menu-right">
-										<a href="#imagesModal_<%= conversation._id %>" class="show-images" data-toggle="modal">
-												Hình ảnh
-												<i class="fa fa-photo"></i>
-										</a>
-								</span>
+							<span>To: <span class="name"><%= conversation.name %></span></span>
+							<span class="chat-menu-right">
+									<a href="#attachsModal_<%= conversation._id %>" class="show-attachs" data-toggle="modal">
+											Tệp đính kèm
+											<i class="fa fa-paperclip"></i>
+									</a>
+							</span>
+							<span class="chat-menu-right">
+									<a href="javascript:void(0)">&nbsp;</a>
+							</span>
+							<span class="chat-menu-right">
+									<a href="#imagesModal_<%= conversation._id %>" class="show-images" data-toggle="modal">
+											Hình ảnh
+											<i class="fa fa-photo"></i>
+									</a>
+							</span>
+							<span class="chat-menu-right">
+								<a href="javascript:void(0)">&nbsp;</a>
+							</span>
+							<span class="chat-menu-right">
+								<a href="javascript:void(0)" class="show-modal-number-members" data-toggle="modal">
+										<span class="number-members"><%= conversation.userAmount %></span>
+										<i class="fa fa-users"></i>
+								</a>
+							</span>
+							<span class="chat-menu-right">
+								<a href="javascript:void(0)">&nbsp;</a>
+							</span>
+							<span class="chat-menu-right">
+								<a href="javascript:void(0)">
+										<span class="number-messages"><%= conversation.messageAmount %></span>
+										<i class="fa fa-comments-o"></i>
+								</a>
+							</span>
 						</div>
 						<div class="content-chat">
 							<div class="chat" data-chat="<%= conversation._id %>">
 							<% conversation.messages.forEach(function(message){ %>
 								<% if(message.messageType === 'text') { %>
-									<div class="bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
+									<div class="convert-emoji bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
 									data-mess-id="<%= message._id %>">
 										<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small" title="<%= message.sender.name %>" />
 										<%= message.text %>
@@ -93,9 +111,7 @@
 							<div class="chat" data-chat="<%= conversation._id %>">
 							<% conversation.messages.forEach(function(message){ %>
 								<% if(message.messageType === 'text') { %>
-									<div class="bubble 
-									<% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
-									data-mess-id="<%= message._id %>">
+									<div class="convert-emoji bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>" data-mess-id="<%= message._id %>">
 										<%= message.text %>
 									</div>
 								<% } %>
@@ -111,7 +127,7 @@
 									data-mess-id="<%= message._id %>">
 										<a href="data:<%= message.file.contentType %>; base64, <%= message.file.data %>" 
 										download="<%= message.file.fileName %>">
-												<%= message.file.fileName %>
+											<%= message.file.fileName %>
 										</a>
 									</div>
 								<% } %>
