--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -1476,3 +1476,11 @@ label:focus,
 .number-messages{
 	color: #2c3e50 !important;
 }
+
+.person .time.active,
+.person .preview.active{
+	font-weight: bold;
+	font-style: oblique;
+	color: black !important;
+	background-color: transparent !important;
+}
