--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -65,7 +65,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="dropdown" id="dropdown-navbar-user" data-uid="user._id">
+                <li class="dropdown" id="dropdown-navbar-user" data-uid="<%= user._id %>">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <img id="avatar-navbar" class="avatar-small" src="./libraries/images/users/<%= user.avatar %>" alt="">
                         <span id="navbar-username"><%= user.username %></span>
