--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -68,6 +68,7 @@
 	<script src="./libraries/js/readMoreContactsReceived.js"></script>
 
 	<script src="./libraries/js/chatText.js"></script>
+	<script src="./libraries/js/typingMessage.js"></script>
 
 	<%- include('contact/contactModal') %>
 
