--- a/src/views/main/home/sections/rightSide.ejs
+++ b/src/views/main/home/sections/rightSide.ejs
@@ -73,12 +73,12 @@
 								<input type="text" class="write-chat input-chat-group" data-chat="<%= conversation._id %>">
 								<div class="icons">
 										<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
-										<label for="image-chat">
-												<input type="file" id="image-chat" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
+										<label for="image-chat-<%= conversation._id %>">
+												<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat input-chat-group" data-chat="<%= conversation._id %>">
 												<i class="fa fa-photo"></i>
 										</label>
 										<label for="attach-chat">
-												<input type="file" id="attach-chat" name="my-attach-chat" class="attach-chat" data-chat="<%= conversation._id %>">
+												<input type="file" id="attach-chat" name="my-attach-chat" class="attach-chat input-chat-group" data-chat="<%= conversation._id %>">
 												<i class="fa fa-paperclip"></i>
 										</label>
 										<a href="#streamModal" id="video-chat" class="video-chat" data-chat="<%= conversation._id %>" data-toggle="modal">
@@ -140,8 +140,8 @@
 								<input type="text" class="write-chat" data-chat="<%= conversation._id %>">
 								<div class="icons">
 										<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
-										<label for="image-chat">
-												<input type="file" id="image-chat" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
+										<label for="image-chat-<%= conversation._id %>">
+												<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
 												<i class="fa fa-photo"></i>
 										</label>
 										<label for="attach-chat">
