[39] Feature: Chat Image - P2 (Final)

--- a/src/views/main/home/sections/leftSide.ejs
+++ b/src/views/main/home/sections/leftSide.ejs
@@ -38,10 +38,10 @@
 											<%= lastMessage.text %>
 										<% } %>
 										<% if(lastMessage.messageType === 'image'){ %>
-											Hình ảnh
+											<i class="fa fa-file-image-o"></i> Hình ảnh
 										<% } %>
 										<% if(lastMessage.messageType === 'file'){ %>
-											File đính kèm
+											<i class="fa fa-file-text"></i> File đính kèm
 										<% } %>
 									</span>
 								</li>
@@ -68,10 +68,10 @@
 											<%= lastMessage.text %>
 										<% } %>
 										<% if(lastMessage.messageType === 'image'){ %>
-											Hình ảnh
+											<i class="fa fa-file-image-o"></i> Hình ảnh
 										<% } %>
 										<% if(lastMessage.messageType === 'file'){ %>
-											File đính kèm
+											<i class="fa fa-file-text"></i> File đính kèm
 										<% } %>
 									</span>
 								</li>
@@ -119,10 +119,10 @@
 										<%= lastMessage.text %>
 									<% } %>
 									<% if(lastMessage.messageType === 'image'){ %>
-										Hình ảnh
+										<i class="fa fa-file-image-o"></i> Hình ảnh
 									<% } %>
 									<% if(lastMessage.messageType === 'file'){ %>
-										File đính kèm
+										<i class="fa fa-file-text"></i> File đính kèm
 									<% } %>
 								</span>
 							</li>
@@ -172,10 +172,10 @@
 										<%= lastMessage.text %>
 									<% } %>
 									<% if(lastMessage.messageType === 'image'){ %>
-										Hình ảnh
+										<i class="fa fa-file-image-o"></i> Hình ảnh
 									<% } %>
 									<% if(lastMessage.messageType === 'file'){ %>
-										File đính kèm
+										<i class="fa fa-file-text"></i> File đính kèm
 									<% } %>
 								</span>
 							</li>
