[40] Feature: Chat Attachment

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -67,6 +67,7 @@
 	<script src="./libraries/js/readMoreContactsSent.js"></script>
 	<script src="./libraries/js/readMoreContactsReceived.js"></script>
 
+	<script src="./libraries/js/chatAttachment.js"></script>
 	<script src="./libraries/js/chatImage.js"></script>
 	<script src="./libraries/js/chatText.js"></script>
 	<script src="./libraries/js/typingMessage.js"></script>
