--- a/src/views/main/home/sections/rightSide.ejs
+++ b/src/views/main/home/sections/rightSide.ejs
@@ -58,7 +58,7 @@
 									</div>
 								<% } %>
 								<% if(message.messageType === 'file') { %>
-									<div class="bubble bubble-image-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
+									<div class="bubble bubble-attach-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
 									data-mess-id="<%= message._id %>">
 										<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small" title="<%= message.sender.name %>" />
 										<a href="data:<%= message.file.contentType %>; base64, <%= message.file.data %>" download="<%= message.file.fileName %>" title="<%= new Date(message.createdAt).toLocaleString() %>">
@@ -74,14 +74,14 @@
 								<div class="icons">
 										<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
 										<label for="image-chat-<%= conversation._id %>">
-												<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat input-chat-group" data-chat="<%= conversation._id %>">
+												<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat input-chat-group" data-chat="<%= conversation._id %>" accept="image/*">
 												<i class="fa fa-photo"></i>
 										</label>
-										<label for="attach-chat">
-												<input type="file" id="attach-chat" name="my-attach-chat" class="attach-chat input-chat-group" data-chat="<%= conversation._id %>">
+										<label for="attach-chat-<%= conversation._id %>">
+												<input type="file" id="attach-chat-<%= conversation._id %>" name="my-attach-chat" class="attach-chat input-chat-group" data-chat="<%= conversation._id %>">
 												<i class="fa fa-paperclip"></i>
 										</label>
-										<a href="#streamModal" id="video-chat" class="video-chat" data-chat="<%= conversation._id %>" data-toggle="modal">
+										<a href="#streamModal" id="video-chat" class="video-chat input-chat-group" data-chat="<%= conversation._id %>" data-toggle="modal">
 												<i class="fa fa-video-camera"></i>
 										</a>
 										<input type="hidden" id="peer-id" value="">
@@ -125,7 +125,7 @@
 									</div>
 								<% } %>
 								<% if(message.messageType === 'file') { %>
-									<div class="bubble bubble-image-file 
+									<div class="bubble bubble-attach-file 
 									<% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
 									data-mess-id="<%= message._id %>">
 										<a href="data:<%= message.file.contentType %>; base64, <%= message.file.data %>" download="<%= message.file.fileName %>" title="<%= new Date(message.createdAt).toLocaleString() %>">
@@ -144,8 +144,8 @@
 												<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
 												<i class="fa fa-photo"></i>
 										</label>
-										<label for="attach-chat">
-												<input type="file" id="attach-chat" name="my-attach-chat" class="attach-chat" data-chat="<%= conversation._id %>">
+										<label for="attach-chat-<%= conversation._id %>">
+												<input type="file" id="attach-chat-<%= conversation._id %>" name="my-attach-chat" class="attach-chat" data-chat="<%= conversation._id %>">
 												<i class="fa fa-paperclip"></i>
 										</label>
 										<a href="#streamModal" id="video-chat" class="video-chat" data-chat="<%= conversation._id %>" data-toggle="modal">
