[41] Feature: Realtime accept contact & remove contact (And something...)

--- a/src/views/main/home/sections/leftSide.ejs
+++ b/src/views/main/home/sections/leftSide.ejs
@@ -79,6 +79,7 @@
 						<% } %>
 					<% }) %>
 				</ul>
+				<% if(allConversationWithMess.length > 10) { %>
 				<div class="read-more-all-chat">
 					<a href="javascript:void(0)" id="read-more-all-chat">
 						<strong>Xem thêm...</strong>
@@ -92,6 +93,7 @@
 						</div>
 					</div>
 				</div>
+				<% } %>
 			</div>
 			<div class="tab-pane" id="user-chat">
 				<ul class="people no-padding-start">
@@ -130,6 +132,7 @@
 						<% } %>
 					<% }) %>
 				</ul>
+				<% if(allConversationWithMess.length > 10) { %>
 				<div class="read-more-user-chat">
 					<a href="javascript:void(0)" id="read-more-user-chat">
 						<strong>Xem thêm...</strong>
@@ -143,6 +146,7 @@
 						</div>
 					</div>
 				</div>
+				<% } %>
 			</div>
 			<div class="tab-pane" id="group-chat">
 				<ul class="people no-padding-start">
@@ -183,6 +187,7 @@
 						<% } %>
 					<% }) %>
 				</ul>
+				<% if(allConversationWithMess.length > 10) { %>
 				<div class="read-more-group-chat">
 					<a href="javascript:void(0)" id="read-more-group-chat">
 						<strong>Xem thêm...</strong>
@@ -196,6 +201,7 @@
 						</div>
 					</div>
 				</div>
+				<% } %>
 			</div>
 		</div>
 	</div>
