--- a/src/views/main/contact/contactModal.ejs
+++ b/src/views/main/contact/contactModal.ejs
@@ -7,8 +7,8 @@
             </div>
             <div class="modal-body">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#find-user">Tìm người dùng</a></li>
-                    <li><a data-toggle="tab" id="link-contacts" href="#contacts">
+					<li class="active"><a data-toggle="tab" href="#find-user">Tìm người dùng</a></li>
+					<li><a data-toggle="tab" id="link-contacts" href="#contacts">
 						Danh bạ 
 						<% if(countAllContacts > 0) { %>
 							<span class="show-number-contacts count-contacts">
@@ -18,7 +18,7 @@
 							<span class="show-number-contacts count-contacts d-none">(<b></b>)</span>
 						<% } %>
 					</a></li>
-                    <li><a data-toggle="tab" id="link-request-contact-sent" href="#request-contact-sent">
+					<li><a data-toggle="tab" id="link-request-contact-sent" href="#request-contact-sent">
 						Đang chờ xác nhận 
 						<% if(countAllContactsSend > 0) { %>
 							<span class="show-number-contacts count-request-contact-sent">
@@ -27,8 +27,8 @@
 						<% } else{ %>
 							<span class="show-number-contacts count-request-contact-sent d-none">(<b></b>)</span>
 						<% } %>
-                    </a></li>
-                    <li><a data-toggle="tab" id="link-request-contact-received" href="#request-contact-received">
+					</a></li>
+					<li><a data-toggle="tab" id="link-request-contact-received" href="#request-contact-received">
 						Yêu cầu kết bạn 
 						<% if(countAllContactsReceived > 0) { %>
 							<span class="show-number-contacts count-request-contact-received">
@@ -37,110 +37,114 @@
 						<% } else{ %>
 							<span class="show-number-contacts count-request-contact-received d-none">(<b></b>)</span>
 						<% } %>
-                    </a></li>
+					</a></li>
                 </ul>
                 <div class="tab-content">
-                    <div id="find-user" class="tab-pane fade in active">
-                        <div class="find-user-top">
-                            <div class="input-group col-md-12">
-                                <input type="text" id="input-find-users" class="form-control" placeholder="Nhập E-mail hoặc username..." />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-lg" id="btn-find-users" type="button">
-                                        <i class="glyphicon glyphicon-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="find-user-bottom">
-                            <ul class="contactList"> </ul>
-                        </div>
-                    </div>
-                    <div id="contacts" class="tab-pane fade">
-                        <div class="find-user-bottom">
-                            <ul class="contactList">
-								<% contacts.forEach(function(user){ %>
-									<li class="_contactList" data-uid="<%= user._id %>">
-										<div class="contactPanel">
-											<div class="user-avatar">
-												<img src="./libraries/images/users/<%= user.avatar %>" alt="">
-											</div>
-											<div class="user-name">
-												<p>
-													<%= user.username %>
-												</p>
-											</div>
-											<br>
-											<div class="user-address">
-												<span>&nbsp <%= user.address %></span>
-											</div>
-											<div class="user-talk" data-uid="<%= user._id %>">
-												Trò chuyện
-											</div>
-											<div class="user-remove-contact action-danger" data-uid="<%= user._id %>">
-												Xóa liên hệ
-											</div>
-										</div>
-									</li>
-								<% }) %>
-							</ul>
-							<div class="modal-see-more-contacts">
-								<a href="javascript:void(0)" id="link-read-more-contacts">
-									<strong>Xem thêm danh bạ</strong>
-								</a>
-								<div class="read-more-contacts-loader">
-									<div class="sk-wave">
-										<div class="sk-wave-rect"></div>
-										<div class="sk-wave-rect"></div>
-										<div class="sk-wave-rect"></div>
-										<div class="sk-wave-rect"></div>
-									</div>
+					<div id="find-user" class="tab-pane fade in active">
+						<div class="find-user-top">
+							<div class="input-group col-md-12">
+								<input type="text" id="input-find-users" class="form-control" placeholder="Nhập E-mail hoặc username..." />
+								<span class="input-group-btn">
+									<button class="btn btn-lg" id="btn-find-users" type="button">
+										<i class="glyphicon glyphicon-search"></i>
+									</button>
+								</span>
+							</div>
+						</div>
+						<div class="find-user-bottom">
+							<ul class="contactList"> </ul>
+						</div>
+					</div>
+			<div id="contacts" class="tab-pane fade">
+				<div class="find-user-bottom">
+					<ul class="contactList">
+					<% contacts.forEach(function(user){ %>
+						<li class="_contactList" data-uid="<%= user._id %>">
+							<div class="contactPanel">
+								<div class="user-avatar">
+									<img src="./libraries/images/users/<%= user.avatar %>" alt="">
+								</div>
+								<div class="user-name">
+									<p>
+										<%= user.username %>
+									</p>
+								</div>
+								<br>
+								<div class="user-address">
+									<span>&nbsp <%= user.address %></span>
+								</div>
+								<div class="user-talk" data-uid="<%= user._id %>">
+									Trò chuyện
+								</div>
+								<div class="user-remove-contact action-danger" data-uid="<%= user._id %>">
+									Xóa liên hệ
 								</div>
 							</div>
-                        </div>
-                    </div>
-                    <div id="request-contact-sent" class="tab-pane fade">
-                        <div class="find-user-bottom">
-                            <ul class="contactList">
-								<% contactsSent.forEach(function(user){ %>
-									<li class="_contactList" data-uid="<%= user._id %>">
-										<div class="contactPanel">
-											<div class="user-avatar">
-												<img src="./libraries/images/users/<%= user.avatar %>" alt="">
-											</div>
-											<div class="user-name">
-												<p>
-													<%= user.username %>
-												</p>
-											</div>
-											<br>
-											<div class="user-address">
-												<span>&nbsp <%= user.address %></span>
-											</div>
-											<div class="user-remove-request-contact d-important action-danger" data-uid="<%= user._id %>">
-												Hủy yêu cầu
-											</div>
-										</div>
-									</li>
-								<% }) %>
-							</ul>
-							<div class="modal-see-more-contacts-sent">
-								<a href="javascript:void(0)" id="link-read-more-contacts-sent">
-									<strong>Xem thêm yêu cầu đã gửi</strong>
-								</a>
-								<div class="read-more-contacts-sent-loader">
-									<div class="sk-wave">
-										<div class="sk-wave-rect"></div>
-										<div class="sk-wave-rect"></div>
-										<div class="sk-wave-rect"></div>
-										<div class="sk-wave-rect"></div>
+						</li>
+					<% }) %>
+					</ul>
+					<% if(contacts.length > 10) { %>
+					<div class="modal-see-more-contacts">
+						<a href="javascript:void(0)" id="link-read-more-contacts">
+							<strong>Xem thêm danh bạ</strong>
+						</a>
+						<div class="read-more-contacts-loader">
+							<div class="sk-wave">
+								<div class="sk-wave-rect"></div>
+								<div class="sk-wave-rect"></div>
+								<div class="sk-wave-rect"></div>
+								<div class="sk-wave-rect"></div>
+							</div>
+						</div>
+					</div>
+					<% } %>
+				</div>
+			</div>
+			<div id="request-contact-sent" class="tab-pane fade">
+				<div class="find-user-bottom">
+					<ul class="contactList">
+						<% contactsSent.forEach(function(user){ %>
+							<li class="_contactList" data-uid="<%= user._id %>">
+								<div class="contactPanel">
+									<div class="user-avatar">
+										<img src="./libraries/images/users/<%= user.avatar %>" alt="">
+									</div>
+									<div class="user-name">
+										<p>
+											<%= user.username %>
+										</p>
+									</div>
+									<br>
+									<div class="user-address">
+										<span>&nbsp <%= user.address %></span>
+									</div>
+									<div class="user-remove-request-contact d-important action-danger" data-uid="<%= user._id %>">
+										Hủy yêu cầu
 									</div>
 								</div>
+							</li>
+						<% }) %>
+					</ul>
+					<% if(contactsSent.length > 10) { %>
+					<div class="modal-see-more-contacts-sent">
+						<a href="javascript:void(0)" id="link-read-more-contacts-sent">
+							<strong>Xem thêm yêu cầu đã gửi</strong>
+						</a>
+						<div class="read-more-contacts-sent-loader">
+							<div class="sk-wave">
+								<div class="sk-wave-rect"></div>
+								<div class="sk-wave-rect"></div>
+								<div class="sk-wave-rect"></div>
+								<div class="sk-wave-rect"></div>
 							</div>
-                        </div>
-                    </div>
-                    <div id="request-contact-received" class="tab-pane fade">
-                        <div class="find-user-bottom">
-                            <ul class="contactList">
+						</div>
+					</div>
+					<% } %>
+				</div>
+			</div>
+			<div id="request-contact-received" class="tab-pane fade">
+					<div class="find-user-bottom">
+							<ul class="contactList">
 								<% contactsReceived.forEach(function(user){ %>
 									<li class="_contactList" data-uid="<%= user._id %>">
 										<div class="contactPanel">
@@ -166,6 +170,7 @@
 									</li>
 								<% }) %>
 							</ul>
+							<% if(contactsReceived.length > 10) { %>
 							<div class="modal-see-more-contacts-received">
 								<a href="javascript:void(0)" id="link-read-more-contacts-received">
 									<strong>Xem thêm yêu cầu kết bạn</strong>
@@ -179,6 +184,7 @@
 									</div>
 								</div>
 							</div>
+							<% } %>
                         </div>
                     </div>
                 </div>
