[42] Feature: Create Group Chat - P1

--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -1262,7 +1262,7 @@ label:focus,
   border-color: #576574 !important;
 }
 
-.add-user {
+.add-user-to-group {
   box-sizing: border-box;
   display: inline-flex;
   flex-shrink: 0;
