--- a/src/views/main/contact/_FindToAddContact.ejs
+++ b/src/views/main/contact/_FindToAddContact.ejs
@@ -27,7 +27,7 @@
 <% if(users.length === 0){ %>
 	<li class="_contactList text-center">
 		<div class="contactPanel">
-			<div id="user-not-found">
+			<div class="user-not-found">
 				<p>
 					Không tìm thấy kết quả nào
 				</p>
