--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -72,6 +72,9 @@
 	<script src="./libraries/js/chatText.js"></script>
 	<script src="./libraries/js/typingMessage.js"></script>
 
+	<script src="./libraries/js/findUsersToAddGroupChat.js"></script>
+	<script src="./libraries/js/createGroupChat.js"></script>
+
 	<%- include('contact/contactModal') %>
 
 	<%- include('stream/streamModal') %>
