--- a/src/views/main/groupChat/groupChatModal.ejs
+++ b/src/views/main/groupChat/groupChatModal.ejs
@@ -9,59 +9,16 @@
                 <div class="col-md-5 col-sm-12 find-user-add-to-group">
                     <div class="row form-search-to-add">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="btn-search-friend-to-add-group-chat" placeholder="Nhập E-mail hoặc username của bạn bè..." />
+                            <input type="text" class="form-control" id="input-search-contact-to-add-group-chat" placeholder="Nhập E-mail hoặc username của bạn bè..." />
                             <span class="input-group-btn">
-                                <button class="btn btn-lg" type="button">
+                                <button class="btn btn-lg" id="btn-search-contact-to-add-group-chat" type="button">
                                     <i class="glyphicon glyphicon-search"></i>
                                 </button>
                             </span>
                         </div>
                     </div>
                     <div class="row result-searched">
-                        <ul id="group-chat-friends">
-                            <div data-uid="test-uid-01">
-                                <li data-uid="test-uid-01">
-                                    <div class="contactPanel">
-                                        <div class="user-avatar">
-                                            <img src="./libraries/images/users/avatar-default.png" alt="">
-                                        </div>
-                                        <div class="user-name">
-                                            <p>
-                                                Trung Quân
-                                            </p>
-                                        </div>
-                                        <br>
-                                        <div class="user-address">
-                                            <span>&nbsp Hà Nội, Việt Nam</span>
-                                        </div>
-                                        <div class="add-user" data-uid="test-uid-01">
-                                            Thêm vào nhóm
-                                        </div>
-                                    </div>
-                                </li>
-                            </div>
-                            <div data-uid="test-uid-02">
-                                <li data-uid="test-uid-02">
-                                    <div class="contactPanel">
-                                        <div class="user-avatar">
-                                            <img src="./libraries/images/users/default-avatar-trungquandev-02.jpg" alt="">
-                                        </div>
-                                        <div class="user-name">
-                                            <p>
-                                                Trung Quân
-                                            </p>
-                                        </div>
-                                        <br>
-                                        <div class="user-address">
-                                            <span>&nbsp Hà Nội, Việt Nam</span>
-                                        </div>
-                                        <div class="add-user" data-uid="test-uid-02">
-                                            Thêm vào nhóm
-                                        </div>
-                                    </div>
-                                </li>
-                            </div>
-                        </ul>
+                        <ul id="group-chat-friends"></ul>
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-12 list-user-added">
