--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -87,6 +87,8 @@
 
 	<%- include('groupChat/groupChatModal') %>
 
+	<%- include('groupChat/membersModal') %>
+
 	<%- include('notification/notificationModal') %>
 
 </body>
