--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -74,6 +74,7 @@
 
 	<script src="./libraries/js/findUsersToAddGroupChat.js"></script>
 	<script src="./libraries/js/createGroupChat.js"></script>
+	<script src="./libraries/js/searchUserChat.js"></script>
 
 	<%- include('contact/contactModal') %>
 
