--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -437,9 +437,9 @@ label:focus,
 
 .search_content ul li {
   border-bottom: 1px solid #dfe6e9;
-  width: 90%;
+  width: 100%;
   height: auto;
-  padding: 7px 0px 12px 5px;
+  padding: 7px 0px 12px 10px;
   margin: 0 auto;
   list-style-type: none;
 }
@@ -1518,4 +1518,13 @@ label:focus,
 	font-style: oblique;
 	color: black !important;
 	background-color: transparent !important;
+}
+
+.user-not-found{
+	width: 100%;
+	height: 200px;
+	position: absolute;
+	justify-content: center;
+	align-items: center;
+	display: flex;
 }
