[48] Feature: Read more conversations

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -71,6 +71,7 @@
 	<script src="./libraries/js/chatImage.js"></script>
 	<script src="./libraries/js/chatText.js"></script>
 	<script src="./libraries/js/typingMessage.js"></script>
+	<script src="./libraries/js/readMoreConversations.js"></script>
 
 	<script src="./libraries/js/findUsersToAddGroupChat.js"></script>
 	<script src="./libraries/js/createGroupChat.js"></script>
