--- a/src/views/main/home/sections/rightSide.ejs
+++ b/src/views/main/home/sections/rightSide.ejs
@@ -1,181 +1,179 @@
 <div class="col-sm-9 sidenav no-padding">
 	<div class="tab-content" id="screen-chat">
 		<% allConversationWithMess.forEach(function(conversation, index){ %>
-		<% if(conversation.members){ %>
-		<div class="right tab-pane <% if(index === 0){ %> active <% } %>" data-chat="<%= conversation._id %>"
-			id="to_<%= conversation._id %>">
-			<div class="top">
-				<span>To: <span class="name"><%= conversation.name %></span></span>
-				<span class="chat-menu-right">
-					<a href="#attachsModal_<%= conversation._id %>" class="show-attachs" data-toggle="modal">
-						Tệp đính kèm
-						<i class="fa fa-paperclip"></i>
-					</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="javascript:void(0)">&nbsp;</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="#imagesModal_<%= conversation._id %>" class="show-images" data-toggle="modal">
-						Hình ảnh
-						<i class="fa fa-photo"></i>
-					</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="javascript:void(0)">&nbsp;</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="#membersModal_<%= conversation._id %>" class="show-number-members" data-toggle="modal">
-						<span class="number-members"><%= conversation.userAmount %></span>
-						<i class="fa fa-users"></i>
-					</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="javascript:void(0)">&nbsp;</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="javascript:void(0)">
-						<span class="number-messages"><%= conversation.messageAmount %></span>
-						<i class="fa fa-comments-o"></i>
-					</a>
-				</span>
-			</div>
-			<div class="content-chat">
-				<div class="chat" data-chat="<%= conversation._id %>">
-					<% conversation.messages.forEach(function(message){ %>
-					<% if(message.messageType === 'text') { %>
-					<div class="convert-emoji bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
-						data-mess-id="<%= message._id %>">
-						<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small"
-							title="<%= message.sender.name %>" />
-						<span title="<%= new Date(message.createdAt).toLocaleString() %>">
-							<%= message.text %>
+			<% if(conversation.members){ %>
+				<div class="right tab-pane <% if(index === 0){ %> active <% } %>" data-chat="<%= conversation._id %>"
+					id="to_<%= conversation._id %>">
+					<div class="top">
+						<span>To: <span class="name"><%= conversation.name %></span></span>
+						<span class="chat-menu-right">
+							<a href="#attachsModal_<%= conversation._id %>" class="show-attachs" data-toggle="modal">
+								Tệp đính kèm
+								<i class="fa fa-paperclip"></i>
+							</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="javascript:void(0)">&nbsp;</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="#imagesModal_<%= conversation._id %>" class="show-images" data-toggle="modal">
+								Hình ảnh
+								<i class="fa fa-photo"></i>
+							</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="javascript:void(0)">&nbsp;</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="#membersModal_<%= conversation._id %>" class="show-number-members" data-toggle="modal">
+								<span class="number-members"><%= conversation.userAmount %></span>
+								<i class="fa fa-users"></i>
+							</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="javascript:void(0)">&nbsp;</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="javascript:void(0)">
+								<span class="number-messages"><%= conversation.messageAmount %></span>
+								<i class="fa fa-comments-o"></i>
+							</a>
 						</span>
 					</div>
-					<% } %>
-					<% if(message.messageType === 'image') { %>
-					<div
-						class="bubble bubble-image-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
-						data-mess-id="<%= message._id %>">
-						<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small"
-							title="<%= message.sender.name %>" />
-						<img src="data:<%= message.file.contentType %>; base64, <%= bufferToBase64(message.file.data) %>"
-							class="show-image-chat" title="<%= new Date(message.createdAt).toLocaleString() %>">
+					<div class="content-chat">
+						<div class="chat" data-chat="<%= conversation._id %>">
+							<% conversation.messages.forEach(function(message){ %>
+								<% if(message.messageType === 'text') { %>
+								<div class="convert-emoji bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
+									data-mess-id="<%= message._id %>">
+									<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small"
+										title="<%= message.sender.name %>" />
+									<span title="<%= new Date(message.createdAt).toLocaleString() %>">
+										<%= message.text %>
+									</span>
+								</div>
+								<% } %>
+								<% if(message.messageType === 'image') { %>
+								<div
+									class="bubble bubble-image-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
+									data-mess-id="<%= message._id %>">
+									<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small"
+										title="<%= message.sender.name %>" />
+									<img src="data:<%= message.file.contentType %>; base64, <%= bufferToBase64(message.file.data) %>"
+										class="show-image-chat" title="<%= new Date(message.createdAt).toLocaleString() %>">
+								</div>
+								<% } %>
+								<% if(message.messageType === 'file') { %>
+								<div
+									class="bubble bubble-attach-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
+									data-mess-id="<%= message._id %>">
+									<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small"
+										title="<%= message.sender.name %>" />
+									<a href="data:<%= message.file.contentType %>; base64, <%= bufferToBase64(message.file.data) %>"
+										download="<%= message.file.fileName %>"
+										title="<%= new Date(message.createdAt).toLocaleString() %>">
+										<%= message.file.fileName %>
+									</a>
+								</div>
+								<% } %>
+							<% })%>
+						</div>
 					</div>
-					<% } %>
-					<% if(message.messageType === 'file') { %>
-					<div
-						class="bubble bubble-attach-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
-						data-mess-id="<%= message._id %>">
-						<img src="./libraries/images/users/<%= message.sender.avatar %>" class="avatar-small"
-							title="<%= message.sender.name %>" />
-						<a href="data:<%= message.file.contentType %>; base64, <%= message.file.data %>"
-							download="<%= message.file.fileName %>"
-							title="<%= new Date(message.createdAt).toLocaleString() %>">
-							<%= message.file.fileName %>
-						</a>
+					<div class="write" data-chat="<%= conversation._id %>">
+						<input type="text" class="write-chat input-chat-group" data-chat="<%= conversation._id %>">
+						<div class="icons">
+							<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
+							<label for="image-chat-<%= conversation._id %>">
+								<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat"
+									class="image-chat input-chat-group" data-chat="<%= conversation._id %>" accept="image/*">
+								<i class="fa fa-photo"></i>
+							</label>
+							<label for="attach-chat-<%= conversation._id %>">
+								<input type="file" id="attach-chat-<%= conversation._id %>" name="my-attach-chat"
+									class="attach-chat input-chat-group" data-chat="<%= conversation._id %>">
+								<i class="fa fa-paperclip"></i>
+							</label>
+							<a href="#streamModal" id="video-chat" class="video-chat input-chat-group"
+								data-chat="<%= conversation._id %>" data-toggle="modal">
+								<i class="fa fa-video-camera"></i>
+							</a>
+							<input type="hidden" id="peer-id" value="">
+						</div>
 					</div>
-					<% } %>
-					<% })%>
 				</div>
-			</div>
-			<div class="write" data-chat="<%= conversation._id %>">
-				<input type="text" class="write-chat input-chat-group" data-chat="<%= conversation._id %>">
-				<div class="icons">
-					<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
-					<label for="image-chat-<%= conversation._id %>">
-						<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat"
-							class="image-chat input-chat-group" data-chat="<%= conversation._id %>" accept="image/*">
-						<i class="fa fa-photo"></i>
-					</label>
-					<label for="attach-chat-<%= conversation._id %>">
-						<input type="file" id="attach-chat-<%= conversation._id %>" name="my-attach-chat"
-							class="attach-chat input-chat-group" data-chat="<%= conversation._id %>">
-						<i class="fa fa-paperclip"></i>
-					</label>
-					<a href="#streamModal" id="video-chat" class="video-chat input-chat-group"
-						data-chat="<%= conversation._id %>" data-toggle="modal">
-						<i class="fa fa-video-camera"></i>
-					</a>
-					<input type="hidden" id="peer-id" value="">
-				</div>
-			</div>
-		</div>
-		<% } else{ %>
-		<div class="right tab-pane <% if(index === 0){ %> active <% } %>" data-chat="<%= conversation._id %>"
-			id="to_<%= conversation._id %>">
-			<div class="top">
-				<span>To: <span class="name"><%= conversation.username %></span></span>
-				<span class="chat-menu-right">
-					<a href="#attachsModal_<%= conversation._id %>" class="show-attachs" data-toggle="modal">
-						Tệp đính kèm
-						<i class="fa fa-paperclip"></i>
-					</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="javascript:void(0)">&nbsp;</a>
-				</span>
-				<span class="chat-menu-right">
-					<a href="#imagesModal_<%= conversation._id %>" class="show-images" data-toggle="modal">
-						Hình ảnh
-						<i class="fa fa-photo"></i>
-					</a>
-				</span>
-			</div>
-			<div class="content-chat">
-				<div class="chat" data-chat="<%= conversation._id %>">
-					<% conversation.messages.forEach(function(message){ %>
-					<% if(message.messageType === 'text') { %>
-					<div class="convert-emoji bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
-						data-mess-id="<%= message._id %>">
-						<span title="<%= new Date(message.createdAt).toLocaleString() %>">
-							<%= message.text %>
+			<% } else{ %>
+				<div class="right tab-pane <% if(index === 0){ %> active <% } %>" data-chat="<%= conversation._id %>"
+					id="to_<%= conversation._id %>">
+					<div class="top">
+						<span>To: <span class="name"><%= conversation.username %></span></span>
+						<span class="chat-menu-right">
+							<a href="#attachsModal_<%= conversation._id %>" class="show-attachs" data-toggle="modal">
+								Tệp đính kèm
+								<i class="fa fa-paperclip"></i>
+							</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="javascript:void(0)">&nbsp;</a>
+						</span>
+						<span class="chat-menu-right">
+							<a href="#imagesModal_<%= conversation._id %>" class="show-images" data-toggle="modal">
+								Hình ảnh
+								<i class="fa fa-photo"></i>
+							</a>
 						</span>
 					</div>
-					<% } %>
-					<% if(message.messageType === 'image') { %>
-					<div class="bubble bubble-image-file
-									<% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>" data-mess-id="<%= message._id %>">
-						<img src="data:<%= message.file.contentType %>; base64, <%= bufferToBase64(message.file.data) %>"
-							class="show-image-chat" title="<%= new Date(message.createdAt).toLocaleString() %>">
+					<div class="content-chat">
+						<div class="chat" data-chat="<%= conversation._id %>">
+							<% conversation.messages.forEach(function(message){ %>
+								<% if(message.messageType === 'text') { %>
+								<div class="convert-emoji bubble <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>"
+									data-mess-id="<%= message._id %>">
+									<span title="<%= new Date(message.createdAt).toLocaleString() %>">
+										<%= message.text %>
+									</span>
+								</div>
+								<% } %>
+								<% if(message.messageType === 'image') { %>
+								<div class="bubble bubble-image-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>" data-mess-id="<%= message._id %>">
+									<img src="data:<%= message.file.contentType %>; base64, <%= bufferToBase64(message.file.data) %>"
+										class="show-image-chat" title="<%= new Date(message.createdAt).toLocaleString() %>">
+								</div>
+								<% } %>
+								<% if(message.messageType === 'file') { %>
+								<div class="bubble bubble-attach-file <% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>" data-mess-id="<%= message._id %>">
+									<a href="data:<%= message.file.contentType %>; base64, <%= bufferToBase64(message.file.data) %>"
+										download="<%= message.file.fileName %>"
+										title="<%= new Date(message.createdAt).toLocaleString() %>">
+										<%= message.file.fileName %>
+									</a>
+								</div>
+								<% } %>
+							<% })%>
+						</div>
 					</div>
-					<% } %>
-					<% if(message.messageType === 'file') { %>
-					<div class="bubble bubble-attach-file 
-									<% if(message.senderId == user._id){ %> me <% } else{ %> you <% } %>" data-mess-id="<%= message._id %>">
-						<a href="data:<%= message.file.contentType %>; base64, <%= message.file.data %>"
-							download="<%= message.file.fileName %>"
-							title="<%= new Date(message.createdAt).toLocaleString() %>">
-							<%= message.file.fileName %>
-						</a>
+					<div class="write" data-chat="<%= conversation._id %>">
+						<input type="text" class="write-chat" data-chat="<%= conversation._id %>">
+						<div class="icons">
+							<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
+							<label for="image-chat-<%= conversation._id %>">
+								<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat"
+									data-chat="<%= conversation._id %>">
+								<i class="fa fa-photo"></i>
+							</label>
+							<label for="attach-chat-<%= conversation._id %>">
+								<input type="file" id="attach-chat-<%= conversation._id %>" name="my-attach-chat" class="attach-chat"
+									data-chat="<%= conversation._id %>">
+								<i class="fa fa-paperclip"></i>
+							</label>
+							<a href="#streamModal" id="video-chat" class="video-chat" data-chat="<%= conversation._id %>"
+								data-toggle="modal">
+								<i class="fa fa-video-camera"></i>
+							</a>
+							<input type="hidden" id="peer-id" value="">
+						</div>
 					</div>
-					<% } %>
-					<% })%>
 				</div>
-			</div>
-			<div class="write" data-chat="<%= conversation._id %>">
-				<input type="text" class="write-chat" data-chat="<%= conversation._id %>">
-				<div class="icons">
-					<a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
-					<label for="image-chat-<%= conversation._id %>">
-						<input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat"
-							data-chat="<%= conversation._id %>">
-						<i class="fa fa-photo"></i>
-					</label>
-					<label for="attach-chat-<%= conversation._id %>">
-						<input type="file" id="attach-chat-<%= conversation._id %>" name="my-attach-chat" class="attach-chat"
-							data-chat="<%= conversation._id %>">
-						<i class="fa fa-paperclip"></i>
-					</label>
-					<a href="#streamModal" id="video-chat" class="video-chat" data-chat="<%= conversation._id %>"
-						data-toggle="modal">
-						<i class="fa fa-video-camera"></i>
-					</a>
-					<input type="hidden" id="peer-id" value="">
-				</div>
-			</div>
-		</div>
-		<% } %>
+			<% } %>
 		<% }); %>
 	</div>
 
