--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -502,6 +502,7 @@ label:focus,
 .read-more-group-chat {
    text-align: center;
 	margin-top: 30px;
+	margin-bottom: 20px;
 	font-size: 16px;
 }
 .navbar-brand>img {
