--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -51,6 +51,7 @@
 	<script src="./libraries/bower_components/jquery-colorbox/jquery.colorbox-min.js"></script>
 	<script src="socket.io/socket.io.js"></script>
 
+	<script src="./libraries/js/template.js"></script>
 	<script src="./libraries/js/mainConfig.js"></script>
 	<script src="./libraries/js/updateProfile.js"></script>
 
