--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -499,7 +499,8 @@ label:focus,
 .modal-see-more-contacts-received,
 .read-more-all-chat,
 .read-more-user-chat,
-.read-more-group-chat {
+.read-more-group-chat,
+.read-more-message {
    text-align: center;
 	margin-top: 30px;
 	margin-bottom: 20px;
@@ -1385,11 +1386,20 @@ label:focus,
 .read-more-contacts-received-loader,
 .read-more-all-chat-loader,
 .read-more-user-chat-loader,
-.read-more-group-chat-loader{
+.read-more-group-chat-loader,
+.read-more-message-loader{
 	display: none;
 	left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
+	transform: translateX(-50%);
+	position: absolute;
+}
+.read-more-message-loader{
+	display: block;
+}
+.read-more-message{
+	display: none;
+	height: 30px;
+	margin-top: 15px;
 }
 .sk-wave {
 	width: 30px;
