--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -95,5 +95,6 @@
 	<script src="./libraries/js/findUsersToAddGroupChat.js"></script>
 	<script src="./libraries/js/createGroupChat.js"></script>
 	<script src="./libraries/js/searchUserChat.js"></script>
+	<script src="./libraries/js/leaveGroupChat.js"></script>
 </body>
 </html>
