[55] Feature: Call video P3 (Final)

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -23,6 +23,7 @@
 	<div class="loader">
 		<div class="loader-main"></div>
 	</div>
+	<input type="hidden" id="input-ice-server" value="<%= iceTurnServerList %>">
     
 	<% if(success != '') { %>
 		<div class="master-success-message alert alert-success"> 
