--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -1,102 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Message Chat</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<head>
+		<title>Message Chat</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-	<link rel="shortcut icon" href="./libraries/images/logo_favicon/favicon-trungquandev.png" />
-	<link rel="stylesheet" href="./libraries/bower_components/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" href="./libraries/bower_components/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="./libraries/bower_components/AlertifyJS/build/css/alertify.css">
-	<!-- <link rel="stylesheet" href="./libraries/bower_components/sweetalert2/dist/sweetalert2.min.css"> -->
-	<link rel="stylesheet" href="./libraries/bower_components/emojionearea/dist/emojionearea.min.css">
-	<link rel="stylesheet" href="./libraries/emojione/extras/css/emojione.min.css">
-	<!-- <link rel="stylesheet" href="./libraries/emojione/extras/css/emojione-awesome.css"> -->
-	<link rel="stylesheet" href="./libraries/bower_components/photoset-grid/css/colorbox.css">
+		<link rel="shortcut icon" href="./libraries/images/logo_favicon/logo.jpg" />
+		<link
+			rel="stylesheet"
+			href="./libraries/bower_components/bootstrap/dist/css/bootstrap.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="./libraries/bower_components/font-awesome/css/font-awesome.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="./libraries/bower_components/AlertifyJS/build/css/alertify.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="./libraries/bower_components/emojionearea/dist/emojionearea.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="./libraries/emojione/extras/css/emojione.min.css"
+		/>
+		<!-- <link rel="stylesheet" href="./libraries/emojione/extras/css/emojione-awesome.css"> -->
+		<link
+			rel="stylesheet"
+			href="./libraries/bower_components/photoset-grid/css/colorbox.css"
+		/>
 
-	<link rel="stylesheet" href="./libraries/css/style.css">
-</head>
-<body onload="spinLoaded()">
-    <!--Icon loader-->
-	<div class="loader">
-		<div class="loader-main"></div>
-	</div>
-	<input type="hidden" id="input-ice-server" value="<%= iceTurnServerList %>">
-    
-	<% if(success != '') { %>
-		<div class="master-success-message alert alert-success"> 
-			<%- success %> 
+		<link rel="stylesheet" href="./libraries/css/style.css" />
+	</head>
+	<body onload="spinLoaded()">
+		<!--Icon loader-->
+		<div class="loader">
+			<div class="loader-main"></div>
 		</div>
-	<% } %>
-	
-	<%- include('navbar/navbar') %>
+		<input
+			type="hidden"
+			id="input-ice-server"
+			value="<%= iceTurnServerList %>"
+		/>
 
-	<%- content %>
+		<% if(success != '') { %>
+		<div class="master-success-message alert alert-success"><%- success %></div>
+		<% } %> <%- include('navbar/navbar') %> <%- content %> <%-
+		include('contact/contactModal') %> <%- include('stream/streamModal') %> <%-
+		include('image/imageModal') %> <%- include('attach/attachModal') %> <%-
+		include('profile/profileModal') %> <%- include('groupChat/groupChatModal')
+		%> <%- include('groupChat/membersModal') %> <%-
+		include('notification/notificationModal') %>
 
-	<%- include('contact/contactModal') %>
+		<!--Libraries-->
+		<script src="./libraries/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="./libraries/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+		<script src="./libraries/bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
+		<script src="./libraries/bower_components/AlertifyJS/build/alertify.js"></script>
+		<script src="./libraries/bower_components/moment/min/moment.min.js"></script>
+		<script src="./libraries/bower_components/moment/min/moment-with-locales.min.js"></script>
+		<script src="./libraries/bower_components/emojionearea/dist/emojionearea.min.js"></script>
+		<script src="./libraries/emojione/lib/js/emojione.min.js"></script>
+		<script src="./libraries/bower_components/peerjs/peer.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+		<!-- <script src="./libraries/bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
+		<script src="./libraries/bower_components/photoset-grid/jquery.photoset-grid.min.js"></script>
+		<script src="./libraries/bower_components/jquery-colorbox/jquery.colorbox-min.js"></script>
+		<script src="socket.io/socket.io.js"></script>
 
-	<%- include('stream/streamModal') %>
+		<script src="./libraries/js/template.js"></script>
+		<script src="./libraries/js/mainConfig.js"></script>
+		<script src="./libraries/js/updateProfile.js"></script>
 
-	<%- include('image/imageModal') %>
+		<script src="./libraries/js/calculate.js"></script>
+		<script src="./libraries/js/requestContact.js"></script>
+		<script src="./libraries/js/findUsers.js"></script>
+		<script src="./libraries/js/acceptRequestContactReceived.js"></script>
+		<script src="./libraries/js/removeContact.js"></script>
+		<script src="./libraries/js/talkWithContact.js"></script>
 
-	<%- include('attach/attachModal') %>
+		<script src="./libraries/js/readMoreNotif.js"></script>
+		<script src="./libraries/js/markAllAsRead.js"></script>
 
-	<%- include('profile/profileModal') %>
+		<script src="./libraries/js/readMoreContacts.js"></script>
+		<script src="./libraries/js/readMoreContactsSent.js"></script>
+		<script src="./libraries/js/readMoreContactsReceived.js"></script>
 
-	<%- include('groupChat/groupChatModal') %>
+		<script src="./libraries/js/chatAttachment.js"></script>
+		<script src="./libraries/js/chatImage.js"></script>
+		<script src="./libraries/js/chatText.js"></script>
+		<script src="./libraries/js/callVideo.js"></script>
+		<script src="./libraries/js/typingMessage.js"></script>
+		<script src="./libraries/js/readMoreConversations.js"></script>
+		<script src="./libraries/js/readMoreMessage.js"></script>
 
-	<%- include('groupChat/membersModal') %>
-
-	<%- include('notification/notificationModal') %>
-
-	<!--Libraries-->
-	<script src="./libraries/bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="./libraries/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
-	<script src="./libraries/bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
-	<script src="./libraries/bower_components/AlertifyJS/build/alertify.js"></script>
-	<script src="./libraries/bower_components/moment/min/moment.min.js"></script>
-	<script src="./libraries/bower_components/moment/min/moment-with-locales.min.js"></script>
-	<script src="./libraries/bower_components/emojionearea/dist/emojionearea.min.js"></script>
-	<script src="./libraries/emojione/lib/js/emojione.min.js"></script>
-	<script src="./libraries/bower_components/peerjs/peer.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-	<!-- <script src="./libraries/bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
-	<script src="./libraries/bower_components/photoset-grid/jquery.photoset-grid.min.js"></script>
-	<script src="./libraries/bower_components/jquery-colorbox/jquery.colorbox-min.js"></script>
-	<script src="socket.io/socket.io.js"></script>
-
-	<script src="./libraries/js/template.js"></script>
-	<script src="./libraries/js/mainConfig.js"></script>
-	<script src="./libraries/js/updateProfile.js"></script>
-
-	<script src="./libraries/js/calculate.js"></script>
-	<script src="./libraries/js/requestContact.js"></script>
-	<script src="./libraries/js/findUsers.js"></script>
-	<script src="./libraries/js/acceptRequestContactReceived.js"></script>
-	<script src="./libraries/js/removeContact.js"></script>
-	<script src="./libraries/js/talkWithContact.js"></script>
-
-	<script src="./libraries/js/readMoreNotif.js"></script>
-	<script src="./libraries/js/markAllAsRead.js"></script>
-
-	<script src="./libraries/js/readMoreContacts.js"></script>
-	<script src="./libraries/js/readMoreContactsSent.js"></script>
-	<script src="./libraries/js/readMoreContactsReceived.js"></script>
-
-	<script src="./libraries/js/chatAttachment.js"></script>
-	<script src="./libraries/js/chatImage.js"></script>
-	<script src="./libraries/js/chatText.js"></script>
-	<script src="./libraries/js/callVideo.js"></script>
-	<script src="./libraries/js/typingMessage.js"></script>
-	<script src="./libraries/js/readMoreConversations.js"></script>
-	<script src="./libraries/js/readMoreMessage.js"></script>
-
-	<script src="./libraries/js/findUsersToAddGroupChat.js"></script>
-	<script src="./libraries/js/createGroupChat.js"></script>
-	<script src="./libraries/js/searchUserChat.js"></script>
-	<script src="./libraries/js/leaveGroupChat.js"></script>
-</body>
+		<script src="./libraries/js/findUsersToAddGroupChat.js"></script>
+		<script src="./libraries/js/createGroupChat.js"></script>
+		<script src="./libraries/js/searchUserChat.js"></script>
+		<script src="./libraries/js/leaveGroupChat.js"></script>
+	</body>
 </html>
